--- a/prompt.html
+++ b/prompt.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Prompt</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>Prompt Details</header>
+
+<div class="container" id="promptBox"></div>
+
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script src="firebase.js"></script>
+<script src="app.js"></script>
+</body>
+</html>
