--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<header>🍌 Banana Prompts</header>
+<header>
+  <div class="nav">
+    <div class="logo">🍌 Banana<span>Prompts</span></div>
+    <div>
+      <a href="index.html">Explore</a>
+      <a href="submit.html">Submit</a>
+    </div>
+  </div>
+</header>
+
 
 <div class="container">
   <input id="search" placeholder="Search prompts...">
