Enhance submit.html with navigation header
Added navigation header with logo and explore link.

--- a/submit.html
+++ b/submit.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 
-<header>Submit Prompt</header>
+<header>
+  <div class="nav">
+    <div class="logo">🍌 Banana<span>Prompts</span></div>
+    <div>
+      <a href="index.html">Explore</a>
+    </div>
+  </div>
+</header>
+
 
 <div class="container">
   <input id="title" placeholder="Prompt title">
