--- a/prompt.html
+++ b/prompt.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 
-<header>Prompt Details</header>
+<header>
+  <div class="nav">
+    <div class="logo">🍌 Banana<span>Prompts</span></div>
+    <div>
+      <a href="index.html">Explore</a>
+      <a href="submit.html">Submit</a>
+    </div>
+  </div>
+</header>
+
 
 <div class="container" id="promptBox"></div>
 
