--- a/submit.html
+++ b/submit.html
@@ -12,9 +12,11 @@
     <div class="logo">🍌 Banana<span>Prompts</span></div>
     <div>
       <a href="index.html">Explore</a>
+      <a href="submit.html">Submit</a>
     </div>
   </div>
 </header>
+
 
 
 <div class="container">
