--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
 
 <div class="container">
-  <input id="search" placeholder="Search prompts...">
+  <input class="search" placeholder="Search prompts..." id="search">
   <div class="grid" id="promptList"></div>
 </div>
+
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
